Fixed CSS text alignment on game project pages

--- a/src/Pages/Games/GamePages.css
+++ b/src/Pages/Games/GamePages.css
@@ -51,8 +51,6 @@
 .about-grid {
   font-size: 2rem;
   display: flexbox;
-  align-items: center;
-  justify-content: center;
 }
 
 .info-item {
